--- a/frontend/register.html
+++ b/frontend/register.html
@@ -12,7 +12,8 @@
 <body>
 
   <div class="container">
-    <h2>Cadastro</h2>
+    <h2>Novo por aqui? </h2>
+    <h2 id="cadar">Cadastre-se!</h2>
 
     <form id="registerForm">
       <div class="input-group">
