--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -3,18 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Perfil</title>
+  <link rel="stylesheet" href="styles/profile.css">
 </head>
 <body>
 
-<h2>Perfil do Usuário</h2>
+<div class="container">
+  <h2>Perfil do Usuário</h2>
+  
+  <button id="updUser" onclick="updateUser()">Editar usuário</button>
+  <br><br>
+  <button id="delUser" onclick="deleteUser()">Deletar conta</button>
+  <br><br>
 
-<button onclick="updateUser()">Editar usuário</button>
-<br><br>
-<button onclick="deleteUser()">Deletar conta</button>
-<br><br>
 
-<a href="index.html">Voltar para tarefas</a>
-
+  <a href="index.html">Voltar para tarefas</a>
+</div>
 <script src="js/users.js"></script>
 </body>
 </html>
